# hamr-tutorials

./: .gitignore  README.md
.github/workflows/: ci-linux.yml  ci-mac.yml  ci-root.yml  ci-windows.yml
HAMR-Slang-Tutorials-Example-00/: README.md
HAMR-Slang-Tutorials-Example-00-AADL-Refactored/aadl/: .project
HAMR-Slang-Tutorials-Example-00-AADL-Refactored/aadl/diagrams/: TempControlSystem_TempControlSystem_i.aadl_diagram  TempControlSystem_i_Instance.aadl_diagram
HAMR-Slang-Tutorials-Example-00/aadl/: .gitignore  .project  .system
HAMR-Slang-Tutorials-Example-00/aadl/diagrams/: TempControlSystem_TempControl.aadl_diagram  TempControlSystem_TempControlSystem_i.aadl_diagram
HAMR-Slang-Tutorials-Exercises/HAMR-Slang-Tutorials-AADL-Project-from-Scratch/: HAMR-Slang-Tutorials-AADL-Project-from-Scratch.md
HAMR-Slang-Tutorials-Exercises/HAMR-Slang-Tutorials-Refactor-AADL/: HAMR-Slang-Tutorials-Refactor-AADL.md
HAMR-Slang-Tutorials-Exercises/HAMR-Slang-Tutorials-Refactor-Slang/: HAMR-Slang-Tutorials-Refactor-Slang.md
HAMR-Slang-Tutorials-Exercises/HAMR-Slang-Tutorials-Slang-Project-from-Scratch/: HAMR-Slang-Tutorials-Slang-Project-from-Scratch.md
HAMR-Slang-Tutorials-Prod-Cons-AADL-only/aadl/: ProdCons.aadl  Producer.aadl
HAMR-Slang-Tutorials-Prod-Cons/aadl/: .gitignore  .project  .system  Consumer.aadl
HAMR-Slang-Tutorials-Prod-Cons/aadl/diagrams/: ProdCons_ProdConsSystem_i.aadl_diagram
HAMR-SysMLv2-Rust-Tutorials-Exercises/Ex-Simple-Isolette-DT-add-GUMBO/: 02-Ex-Simple-Isolette-DT-add-GUMBO-GUMBOX.md  03-Ex-Simple-Isolette-DT-add-GUMBO-Verus.md  Ex-Simple-Isolette-DT-add-GUMBO-model.md
HAMR-SysMLv2-Rust-Tutorials-Exercises/Ex-Simple-Isolette-add-DT/: 01-Ex-Simple-Isolette-add-Display-Temp-model.md  02-Ex-Simple-Isolette-add-Display-Temp-code.md
HAMR-SysMLv2-Rust-Tutorials-Exercises/Ex-Simple-Network-Guard/: Ex-Simple-Network-Guard-code.md  Ex-Simple-Network-Guard-model.md
HAMR-SysMLv2-Rust-Tutorials-Exercises/Ex-SysPropStructSplit-add-Prop-yLEx/: 01-Ex-SysPropStructSplit-add-Prop-yLEx-property.md  02-Ex-SysPropStructSplit-add-Prop-yLEx-verify.md
HAMR-SysMLv2-Rust-seL4-P-DP-Example/: .gitignore
HAMR-SysMLv2-Rust-seL4-P-DP-Example-ex-add-display-solution/hamr/microkit-initial/: microkit.system
HAMR-SysMLv2-Rust-seL4-P-DP-Example/requirements/: requirements.md
HAMR-SysMLv2-Rust-seL4-P-DP-Simple-Isolette-DT-add-GUMBO-solution/requirements/: requirements.md
HAMR-SysMLv2-Rust-seL4-P-DP-Simple-Isolette-add-DT-solution/hamr/microkit-initial/crates/operator_interface_operator_interface/: Cargo.toml
HAMR-SysMLv2-Rust-seL4-P-DP-Simple-Isolette-add-DT-solution/hamr/microkit-initial/crates/operator_interface_operator_interface/src/component/: operator_interface_operator_interface_app.rs
HAMR-SysMLv2-Rust-seL4-P-DP-Simple-Isolette-add-DT-solution/hamr/microkit/crates/data/: Cargo.toml
HAMR-SysMLv2-Rust-seL4-P-DP-Simple-Isolette-add-DT-solution/hamr/microkit/crates/data/src/: sb_event_counter.rs
HAMR-SysMLv2-Rust-seL4-P-DP-SysPropStructSplit-add-Prop-yLEx-solution/: .mcp.json
HAMR-SysMLv2-Rust-seL4-P-EDP-Example/requirements/: requirements.md
HAMR-SysMLv2-Rust-seL4-P-EDP-Prod-Cons-Example/hamr/microkit/crates/data/: Cargo.toml
HAMR-SysMLv2-Rust-seL4-P-EDP-Prod-Cons-Example/hamr/microkit/crates/data/src/: lib.rs
HAMR-SysMLv2-Rust-seL4-P-EDP-Prod-Cons-Example/hamr/microkit/crates/data/src/ProdCons/: Message.rs  mod.rs
HAMR-SysMLv2-Rust-seL4-P-EDP-SNG-Example/hamr/microkit/crates/data/: Cargo.toml
HAMR-SysMLv2-Rust-seL4-P-EDP-SNG-Example/hamr/microkit/crates/data/src/: lib.rs  sb_microkit_types.rs
HAMR-SysMLv2-Rust-seL4-P-EDP-SNG-Example/hamr/microkit/crates/data/src/SNG_Data_Model/: Message.rs  SecurityLevel.rs  mod.rs
HAMR-SysMLv2-Rust-seL4-P-EDP-SNG-Example/hamr/microkit/crates/test_sender_test_sender/: Cargo.toml  Makefile
HAMR-SysMLv2-Rust-seL4-P-EDP-SNG-Example/hamr/microkit/crates/test_sender_test_sender/src/: lib.rs
HAMR-SysMLv2-Rust-seL4-P-EDP-SNG-Example/hamr/microkit/crates/test_sender_test_sender/src/bridge/: extern_c_api.rs  mod.rs  test_sender_test_sender_api.rs
HAMR-SysMLv2-Rust-seL4-P-EDP-SNG-Example/hamr/microkit/crates/test_sender_test_sender/src/component/: mod.rs  test_sender_test_sender_app.rs
HAMR-SysMLv2-Rust-seL4-P-EDP-SNG-Example/hamr/microkit/crates/test_sender_test_sender/src/test/: mod.rs  tests.rs
HAMR-SysMLv2-Rust-seL4-P-EDP-SNG-Example/hamr/microkit/crates/test_sender_test_sender/src/test/util/: mod.rs  test_apis.rs
HAMR-SysMLv2-Rust-seL4-P-EDP-SNG-Example/requirements/: component-requirements.md  requirements.md  specification-design.md
bug-reports/: BR-01-simple-isolette-P-DP-example-bugs.md  BR-02-microkit-codegen-pure-eventport-integration-crash.md
(+688 files in other folders)
