# This file will not be overwritten if codegen is rerun

[package]
name = "operator_interface_operator_interface"
version = "0.1.0"
edition = "2021"

[dependencies]
data = { path = "../data" }
linux-raw-sys = { version = "0.12.0", default-features = false }
log = "0.4.28"
sel4 = { git = "https://github.com/seL4/rust-sel4", features = ["single-threaded"], optional = true, tag="v2.0.0" }
sel4-logging = { git = "https://github.com/seL4/rust-sel4", optional = true, tag="v2.0.0" }
vstd = { git = "https://github.com/verus-lang/verus.git", default-features=false, tag="release/0.2026.01.02.6f52890" }
verus_builtin = { git = "https://github.com/verus-lang/verus.git", tag="release/0.2026.01.02.6f52890" }
verus_builtin_macros = { git = "https://github.com/verus-lang/verus.git", tag="release/0.2026.01.02.6f52890" }

[dev-dependencies]
lazy_static = "1.5.0"
once_cell = "1.21.3"
serial_test = "3.2.0"
proptest = "1.8.0"
env_logger = "0.11.8"

[lib]
path = "src/lib.rs"
crate-type = ["staticlib"]

[features]
sel4 = ["dep:sel4", "dep:sel4-logging" ]

[package.metadata.verus]
verify = true

