# This file will not be overwritten if codegen is rerun

[package]
name = "data"
version = "0.1.0"
edition = "2021"

[dependencies]
vstd = { version = "0.0.0-2026-01-25-0057", default-features=false }
verus_builtin = { version = "0.0.0-2026-01-25-0057" }
verus_builtin_macros = { version = "0.0.0-2026-01-25-0057" }

[package.metadata.verus]
verify = true

