# This file will not be overwritten if codegen is rerun

[package]
name = "test_sender_test_sender"
version = "0.1.0"
edition = "2021"

[dependencies]
data = { path = "../data" }
linux-raw-sys = { version = "=0.12.0", default-features = false }
log = "0.4.28"
GumboLib = { path = "../GumboLib" }

# -----------------------------------------------------------------------------
# seL4 Rust crate dependencies
# -----------------------------------------------------------------------------
sel4 = { git = "https://github.com/seL4/rust-sel4", features = ["single-threaded"], optional = true, tag="v2.0.0" }
sel4-logging = { git = "https://github.com/seL4/rust-sel4", optional = true, tag="v2.0.0" }

# -----------------------------------------------------------------------------
# Verus crate dependencies
#
# It is recommended to use the Verus release:
# https://github.com/verus-lang/verus/releases/tag/release/0.2026.01.23.1650a05
# -----------------------------------------------------------------------------
vstd = { version = "=0.0.0-2026-01-25-0057", default-features=false }
verus_builtin = { version = "=0.0.0-2026-01-25-0057" }
verus_builtin_macros = { version = "=0.0.0-2026-01-25-0057" }


[dev-dependencies]
lazy_static = "1.5.0"
once_cell = "1.21.3"
serial_test = "3.2.0"
proptest = "1.8.0"
env_logger = "0.11.8"

[lib]
path = "src/lib.rs"
crate-type = ["staticlib"]

[features]
sel4 = ["dep:sel4", "dep:sel4-logging" ]

[package.metadata.verus]
verify = true

